# make_it_real

./: .dockerignore  .env.template  .gitignore  .mcp.env_example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  graph.md  manage.py  pyproject.toml
aiask/: __init__.py  cli.py  client.py  config.py  models.py
makeitreal/: __init__.py  cli.py  cli2.py  config.py  dump_graph.py  llm.py  models.py  state.py
makeitreal/agents/: __init__.py  base.py  base_agent.py  evaluator.py  idea_curator.py  requirements_generator_agent.py  requirements_review_agent.py  spec_writer.py  task_generator_agent.py  task_review_agent.py  techstack_generator_agent.py  techstack_review_agent.py  test_requirements_generator_agent.py
makeitreal/agents2/: __init__.py  base_agent.py  base_review_agent.py  evaluator.py  idea_curator.py  requirements_generator_agent.py  requirements_review_agent.py  spec_writer.py  techstack_generator_agent.py  techstack_review_agent.py
makeitreal/graph/: __init__.py  human_review.py  state.py  workflow.py
makeitreal/graph2/: human_review.py  state.py  workflow.py
makeitreal/sub_commands/: __init__.py  dump_graph.py
makeitreal/templates/: __init__.py  prd_template.py
makeitreal/tools/: __init__.py  context7_search.py  mcp_client.py  web_search.py
tests/: test_cli.py  test_evaluator.py  test_idea_curator.py  test_requirements_generator_agent.py  test_spec_writer.py  test_workflow.py
